--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,195 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Orelega+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Poppins:wght@500&display=swap');
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Merriweather', serif;
+scroll-behavior: smooth;
+}
+html{
+  scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*font-family: 'Orelega One', cursive;
+}*/
+.navbar-brand{
+  font-family: 'Orelega One', cursive;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-brand strong{
+  color:#0fccce
 }
-
-.App-link {
-  color: #61dafb;
+.navbar{
+  background-color: white !important;
 }
-
-@keyframes App-logo-spin {
+.navbar-brand{
+  font-size:24px;
+}
+.toplink:hover{
+  color: #0fccce;
+  background-color: white;
+}
+.rotate{
+  width:60px;
+  height:40px;
+}
+.rotate {
+  animation: rotation 2s infinite linear;
+}
+@keyframes rotation {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
+}
+.mainhead{
+  font-family: 'Orelega One', cursive;
+  font-size:60px;
+}
+.btn-primary,.btn-primary:hover,.btn-primary:active,.btn-primary:visited{
+  background-color: color #0fccce  !important ;
+}
+.button1{
+  width:140px;
+  text-align: center;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: #0fccce;
+  color:white;
+  font-size: 220px;
+  border-radius: 20px;
+  font-weight: bold;
+  box-shadow: 0px 7px 20px -8px #0fccce;
+}
+
+.button1:hover{
+  color: azure !important;
+  background-color: #0fccce;
+}
+.button{
+  width:250px;
+  background-color: #0fccce;
+  color:white;
+  font-weight: bold;
+  border-radius: 20px;
+  
+
+}
+.button:hover{
+  background-color: white;
+  color:#0fccce
+
+}
+.abouthead{
+  font-size: 42px;
+  font-family: 'Orelega One', cursive;
+  
+}
+.overview{
+  font-family: 'Orelega One', cursive;
+  color:#0fccce;
+}
+.paralist{
+  list-style:none  !important;
+  
+  font-family: 'Open Sans', sans-serif;
+  font-weight:bold
+}
+.lottieimage{
+  width:50vw !important;
+  height: 60vh !important;
+}
+@media only screen and(max-width:150px){
+  .lottieimage .imagel{
+    width: 50px;
+    height: 100px;
+  }
+}
+/*Aware section*/
+.main_content h1{
+	font-size: 30px;
+	
+}
+.main_content h1 span{
+	color:#FF8000;
+
+}
+.section2heading{
+	font-size: 30px;
+	margin-left: 230px;
+	padding:0;
+	margin-top: 0;
+}
+.section2heading span{
+	font-size: 48px
+
+}
+.section2heading span{
+  font-size:56px;
+  margin-top: 20px !important;
+}
+.numli{
+	font-size: 40px;
+	font-weight: bold;
+	color:#0fccce;
+	margin-bottom: 0;
+	margin-top: 20px;
+
+
+}
+.stay{
+  color:#0fccce;
+  font-weight: bold;
+}
+
+
+.section2data ul li{
+
+	list-style: none;
+	font-size: 18px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.section2data ul li p{
+	margin-left: 45px;
+	font-size: 18px;
+	color: #000;
+	margin-top: 40px;
+	line-height: 22px;
+	opacity: 0.7;
+
+}
+.awaresection{
+  background-color: whitesmoke;
+}
+.contactus{
+  color: #0fccce;
+  font-weight: bold !important;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
+
+}
+.morebtn{
+  text-align: center;
+
+  background-color: #0fccce !important;
+  color:white !important;
+  font-size: 20px !important;
+  border-radius: 20px  !important;
+  font-weight: bold !important;
+  border:2px solid white !important;
+  box-shadow: 0px 7px 20px -8px #0fccce !important;
+  outline: none !important;
+}
+.morebtn:hover{
+  background-color: azure !important;
+
+  color:#0fccce !important;
+}
+.btn:focus{
+  box-shadow: none !important;
 }
